Fixing viewport issues on mobile devices

--- a/app/styles/th/_shopping-card.scss
+++ b/app/styles/th/_shopping-card.scss
@@ -17,6 +17,10 @@
 	opacity : 1;
 }
 
+.snap-drawers{
+	overflow: hidden;
+}
+
 .th-cart {
 
 	&__panel{
